[gd_scene load_steps=7 format=3 uid="uid://bu81i3kngj1j5"]

[ext_resource type="FontFile" uid="uid://l5p47kllst7d" path="res://Assets/quan.ttf" id="1"]
[ext_resource type="Texture2D" uid="uid://dm0caa7a38y7i" path="res://Assets/CheckedBox.png" id="2"]
[ext_resource type="Texture2D" uid="uid://6u5b7hwmjl8n" path="res://Assets/UncheckedBox.png" id="3"]
[ext_resource type="Script" path="res://Scripts/AntBoardProfile.gd" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="2"]

[node name="AntBoardProfile" type="Control"]
custom_minimum_size = Vector2(348, 24)
layout_mode = 3
anchor_right = 0.302083
anchor_bottom = 0.037037
mouse_filter = 1
script = ExtResource("4")
metadata/_edit_use_anchors_ = true

[node name="AntNameLabel" type="LineEdit" parent="."]
custom_minimum_size = Vector2(148, 16)
layout_mode = 0
anchor_top = 0.166667
anchor_right = 0.425287
anchor_bottom = 0.833333
focus_mode = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_styles/normal = SubResource("2")
text = "Ant 01"
max_length = 15
expand_to_text_length = true

[node name="gFood" type="CheckBox" parent="."]
layout_mode = 0
anchor_left = 0.411011
anchor_right = 0.477011
anchor_bottom = 1.0
offset_left = -0.0320129
offset_right = 1.0
focus_mode = 0
theme_override_icons/checked = ExtResource("2")
theme_override_icons/unchecked = ExtResource("3")

[node name="gWood" type="CheckBox" parent="."]
layout_mode = 0
anchor_left = 0.571505
anchor_right = 0.640505
anchor_bottom = 1.0
offset_left = 0.115997
offset_right = 0.104004
focus_mode = 0
theme_override_icons/checked = ExtResource("2")
theme_override_icons/unchecked = ExtResource("3")

[node name="gLeaf" type="CheckBox" parent="."]
layout_mode = 0
anchor_left = 0.733
anchor_right = 0.802
anchor_bottom = 1.0
offset_left = -0.0840149
offset_right = -0.0960083
focus_mode = 0
theme_override_icons/checked = ExtResource("2")
theme_override_icons/unchecked = ExtResource("3")

[node name="inDefense" type="CheckBox" parent="."]
layout_mode = 0
anchor_left = 0.893494
anchor_right = 0.962494
anchor_bottom = 1.0
offset_left = 0.0639954
offset_right = 0.052002
tooltip_text = "Coming Soon"
focus_mode = 0
theme_override_icons/checked = ExtResource("2")
theme_override_icons/unchecked = ExtResource("3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="focus_entered" from="AntNameLabel" to="." method="_on_AntNameLabel_focus_entered"]
[connection signal="text_submitted" from="AntNameLabel" to="." method="_on_AntNameLabel_text_entered"]
[connection signal="toggled" from="gFood" to="." method="_on_gFood_toggled"]
[connection signal="toggled" from="gWood" to="." method="_on_gWood_toggled"]
[connection signal="toggled" from="gLeaf" to="." method="_on_gLeaf_toggled"]
[connection signal="toggled" from="inDefense" to="." method="_on_inDefense_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
